--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,9 +12,17 @@
 
 body {
   color: var(--font_color_white);
-  background-color: darkgray;
-  background-image: url(../images/space_with_stars.jpg);
+  background-color: black;
+
+  padding: 0;
+  margin: 0;
+
+  background-image: url(../images/night.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
   background-position: center;
+  width: 100%;
+  height: 100%;
 
   font-family: "Nunito";
 }
@@ -25,21 +33,20 @@ body {
 }
 
 .top_header_container {
-  display: flex;
-  justify-content: space-between;
-
   height: 5rem;
+  display: flex;
+  justify-content: center;
 }
-.logo {
-  align-self: flex-start;
-}
-h1 {
-  margin: 0 auto;
+
+.header {
+  /* margin: 0 auto; */
 }
 
 .main_container {
   display: flex;
   flex-direction: column;
+  /* padding: 2rem 0; */
+  padding-top: 2rem;
 }
 
 /* ****** */
@@ -47,12 +54,12 @@ h1 {
 /* header */
 /* ****** */
 
-.header {
+/* .header {
   display: flex;
   justify-content: center;
 
   height: 5rem;
-}
+} */
 
 form {
   border-radius: var(--border_radius);
@@ -138,16 +145,21 @@ form input:focus {
 
 .current_day_bottom_container {
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 2.8fr;
+  gap: 2rem;
 }
 
 .current_day_degree_container {
   display: flex;
   font-size: 4rem;
+  margin-top: 2rem;
 }
 .current_day_icon {
-  padding: 0;
-  scale: 1;
+  /* padding: 0; */
+  /* scale: 1; */
+
+  min-width: 7rem;
+  margin-right: -1rem;
 }
 .current_day_degree {
   grid-column: 1 / 2;
@@ -161,6 +173,13 @@ form input:focus {
 .current_day_status_container {
   grid-column: 1 / 2;
   grid-row: 2 / 3;
+  margin-top: -3rem;
+
+  padding-left: 2.5rem;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; */
 }
 .current_day_status {
   font-size: 1.5rem;
@@ -176,6 +195,7 @@ form input:focus {
 
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
 }
 .info_container :nth-child(2) {
   font-size: 1.5rem;
@@ -188,21 +208,70 @@ form input:focus {
 /* three_days_view_container  */
 .three_days_view_container {
   display: grid;
-  grid-template-rows: 1fr repeat(3, 2fr);
+  grid-template-rows: 1.8fr repeat(3, 2fr);
+}
+
+.three_days_view_title {
+  margin: 0 auto;
 }
 
 .day_view_container {
   display: grid;
-  grid-template-columns: 3fr repeat(3, 2fr);
+  grid-template-columns: 2.5fr repeat(3, 2fr);
   font-size: 1.5rem;
   justify-content: center;
   align-items: center;
+
+  border-bottom: 2px solid var(--font_color_white);
 }
+
+.day_view_container:last-child {
+  border-bottom: none;
+}
+
 .day_view_container .icon {
   margin: 0 auto;
+}
+.day_view_container .degree_max {
+  margin: 0 auto;
+}
+.day_view_container .degree_min {
+  margin: 0 auto;
+  color: var(--transparent-white);
 }
 
 .three_days_view_title {
   font-size: 2rem;
 }
 /* ************************** */
+
+/* ****** */
+/* footer */
+/* ****** */
+
+footer {
+  background-color: var(--transparent-white);
+  color: var(--font_color_white);
+  font-size: 1rem;
+
+  /* text-align: center; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* z-index: 2; */
+  /* text-shadow: none; */
+  margin-top: auto;
+}
+
+footer img {
+  height: 1.5rem;
+  scale: 1.2;
+  padding: 0;
+}
+
+footer img:hover {
+  transform: scale(1.1);
+}
+
+/* ****** */
+/* ****** */
