--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,11 +8,14 @@
   --font_color_white: #e8e6e3;
   --transparent-white: rgba(255, 255, 255, 0.5);
   --border_radius: 10px;
+  --error_red: red;
+  --default_transition: 0.3s;
 }
 
 body {
   color: var(--font_color_white);
   background-color: black;
+  min-height: 100vh;
 
   padding: 0;
   margin: 0;
@@ -32,21 +35,13 @@ body {
   padding: 4px; */
 }
 
-.top_header_container {
-  height: 5rem;
-  display: flex;
-  justify-content: center;
-}
-
-.header {
-  /* margin: 0 auto; */
-}
-
 .main_container {
   display: flex;
   flex-direction: column;
   /* padding: 2rem 0; */
+
   padding-top: 2rem;
+  min-height: 70vh;
 }
 
 /* ****** */
@@ -54,12 +49,23 @@ body {
 /* header */
 /* ****** */
 
-/* .header {
-  display: flex;
-  justify-content: center;
-
+.top_header_container {
   height: 5rem;
-} */
+
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+}
+
+.top_header_container .error_message {
+  min-height: 2rem;
+  color: var(--error_red);
+}
+
+.header {
+  /* margin: 0 auto; */
+}
 
 form {
   border-radius: var(--border_radius);
@@ -72,8 +78,11 @@ form {
 }
 form:hover {
   border-color: orange;
-
-  transition: border 0.3s;
+  transition: border var(--default_transition);
+}
+form.error_active {
+  border-color: var(--error_red);
+  transition: border var(--default_transition);
 }
 form button {
   cursor: pointer;
@@ -84,6 +93,10 @@ form button img {
   height: 1.5rem;
   margin: 0;
   padding: 0;
+  transition: var(--default_transition);
+}
+form button img:hover {
+  scale: 1.4;
 }
 form input {
   cursor: pointer;
@@ -114,6 +127,10 @@ form input:focus {
   align-items: center;
 
   gap: 3rem;
+  display: none;
+}
+.content_main_container.active {
+  display: flex;
 }
 
 /* ********************** */
@@ -152,14 +169,11 @@ form input:focus {
 .current_day_degree_container {
   display: flex;
   font-size: 4rem;
-  margin-top: 2rem;
+  margin-top: 0.5rem;
 }
 .current_day_icon {
-  /* padding: 0; */
-  /* scale: 1; */
-
   min-width: 7rem;
-  margin-right: -1rem;
+  margin-right: -0.5rem;
 }
 .current_day_degree {
   grid-column: 1 / 2;
@@ -173,13 +187,9 @@ form input:focus {
 .current_day_status_container {
   grid-column: 1 / 2;
   grid-row: 2 / 3;
-  margin-top: -3rem;
+  margin-top: -2.5rem;
 
   padding-left: 2.5rem;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; */
 }
 .current_day_status {
   font-size: 1.5rem;
@@ -208,7 +218,9 @@ form input:focus {
 /* three_days_view_container  */
 .three_days_view_container {
   display: grid;
-  grid-template-rows: 1.8fr repeat(3, 2fr);
+  grid-template-rows: minmax(2.5rem, 2rem) repeat(3, 2fr);
+  margin-top: -0.5rem;
+  margin-bottom: 3rem;
 }
 
 .three_days_view_title {
@@ -255,7 +267,7 @@ footer {
   font-size: 1rem;
 
   /* text-align: center; */
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   /* z-index: 2; */
@@ -273,5 +285,68 @@ footer img:hover {
   transform: scale(1.1);
 }
 
+footer.active {
+  display: flex;
+}
+
 /* ****** */
 /* ****** */
+
+/* Loading effect */
+
+.lds-ripple.loading_effect {
+  display: none;
+  margin: 0 auto;
+}
+.lds-ripple.loading_effect.active {
+  display: block;
+  flex-grow: 1;
+}
+
+.lds-ripple {
+  display: inline-block;
+  position: relative;
+  width: 400px;
+  height: 400px;
+}
+.lds-ripple div {
+  position: absolute;
+  border: 4px solid #fff;
+  opacity: 1;
+  border-radius: 50%;
+  animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.lds-ripple div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+@keyframes lds-ripple {
+  0% {
+    top: 180px;
+    left: 180px;
+    width: 0;
+    height: 0;
+    opacity: 0;
+  }
+  4.9% {
+    top: 180px;
+    left: 180px;
+    width: 0;
+    height: 0;
+    opacity: 0;
+  }
+  5% {
+    top: 180px;
+    left: 180px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    width: 360px;
+    height: 360px;
+    opacity: 0;
+  }
+}
+/* ************** */
